--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # Meta description of Homepage
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "fadil" # the subpath of your site, e.g. /blog
+baseurl: "/fadil" # the subpath of your site, e.g. /blog
 url: "https://elishadamu97.github.io/fadil/" # the base hostname & protocol for your site, e.g. http://example.com
 img-profile: 1637145102489.jpeg
 
